package com.mii.android.ad;

public interface IAdAction {
    void create();
    void destroy();
}